# silicon-dna-release

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  probe-worker.mjs  server.js  start.bat  start.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
casper-agent/: CHECKLIST.md  DORAHACKS_UPDATE.md  README.md  STATUS_EXPLANATION.md  TESTING_GUIDE.md  build_wasm_local.ps1  casper-agent.service  casper-oracle-pusher.service  deploy_to_testnet.sh
casper-agent/dashboard/: index.html
casper-agent/mcp-server/: README.md  index.js  package-lock.json  package.json
casper-agent/oracle-contract/: Cargo.toml
casper-agent/oracle-contract/src/: lib.rs
casper-agent/pusher/: .env.example  README.md  casper_defi_agent.py  casper_oracle_pusher.py  requirements.txt
casper-agent/sdk-typescript/: casper-oracle-reader.ts  package-lock.json  package.json  tsconfig.json
casper-agent/ts-agent/: .env.example  agent.js  agent.test.js  call_contract.js  deploy_contract.js  get_contract_hash.js  package-lock.json  package.json  send_deploy.js  spending-limit.js  x402-casper-pay.js
mantle-agent/: .env.example  CHECKLIST.md  DORAHACKS_UPDATE.md  README.md  TuringOracle.sol  mantle_pusher.js  package-lock.json  package.json
proof/: mev_war_2026-05-31.md
src/: CAUSAL_ENGINE.md  SILICON_DNA_LAYERS.md
