[package]
name = "sequencer-oracle"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
casper-contract = "5.1.1"
casper-types    = "6.0.1"
base64ct        = "=1.6.0"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "z"
panic         = "abort"

[patch.crates-io]
casper-contract = { path = "/opt/casper-oracle/casper-contract-patched" }
